# crust-model

./: .gitignore  404.html  LICENSE  README.md  about.html  contact-us.html  gridtable.js  index.html  meta.txt  play-with-webStorm.html  projects-results.html  style.css  watum-single-page-app.html  watum.js
blog/: how-to-use-watum-online.html
crust/: Cargo.toml
crust/src/: main.rs
drawio-layout/: online-watum.html
watum-matlab/WATUM_v0.2/: Dx_1959_Elder.m  Dx_1966_Fischer.m  Dx_1974_McQuivey_and_Keefer.m  Dx_1975_Fischer.m  Dx_1977_Liu.m  Dx_1988_Koussis_and_Rodriguez_Mirasol.m  Dx_1991_Iwasa_and_Aya.m  Dx_1998_Li_et_al.m  Dx_1998_Seo_and_Cheong.m  Dx_1998_v2_Li_et_al.m  Dx_2001_Deng_et_al.m  Dx_2002_Kashefipour_and_Falconer.m  Dx_2007_Tavakollizadeh_and_Kashefipur.m  Dx_2009_Sahay_and_Dutta.m  Dx_2011_Azamathulla_and_Wu.m  Dx_2012_Etemadshahidi_and_Taghipour.m  Dx_2014_Zeng_and_Huai.m  Dx_2015_Disley.m  Dx_2017_Ghiasi_et_al_Paper03_severn_sigma01.xlsx  Dx_2017_Ghiasi_et_al_Paper03_severn_sigma02.xlsx  Dx_2017_Noori_et_al.m  Dx_2017_Qiasi_et_al_01.m  Dx_2017_Qiasi_et_al_02.m  cp_ghiasi_02.txt  metrics.m  timindexer.m  watum-config.xml  watum019.m
watum-rust/: Cargo.toml  any-name-for-your-project-here.txt
watum-rust/src/: any-name-for-your-project-here.txt  main.rs
weblog/: how-to-use-watum-online.html
