[package]
name = "watum re-written in rust"
version = "0.1.0"
edition = "2020"
authors = ["Mostafa Ramezani <Mostafa.Ramezani@outlook.com>",
           "Farhad Jazaei <fjazaei@memphis.edu>",
           "Pål-Tore Storli <pal-tore.storli@ntnu.no>"]
license = "MIT OR Apache-2.0"
homepage = "https://watum.ir"
repository = "https://github.com/Riverchain/rust-wqm"
documentation = "https://watum.ir/rust-wqm/docs"
readme = "README.md"
description = """
watum is being re-written with rust in this project. Water qaulity engineers and environmental scientists can utilize this tool to simulate water bodies quality condition
"""


#name = "watum-rust"
#version = "0.1.0"
#authors = ["Mostafa Ramezani <ramezani.m@ut.ac.ir>"]
#edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
