[package]
name = "rust-water-quality-model"
version = "0.1.0"
edition = "2018"
authors = ["Mostafa Ramezani <Mostafa.Ramezani@outlook.com>",
           "Farhad Jazaei <fjazaei@memphis.edu>",
           "Jenna Davis <jennadavis@stanford.edu>",
           "Pål-Tore Storli <pal-tore.storli@ntnu.no>"]
license = "MIT OR Apache-2.0"
homepage = "https://watum.ir"
repository = "https://github.com/Riverchain/rust-wqm"
documentation = "https://watum.ir/rust-wqm/docs"
readme = "README.md"
description ="""
watum water quality model rewritten in rust
"""


#name = "watum-rust"
#version = "0.1.0"
#authors = ["Mostafa Ramezani <ramezani.m@ut.ac.ir>"]
#edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.7.3"
