[package]
name = "crust-water-quality-model"
version = "0.2.0"
edition = "2018"
authors = ["Mostafa Ramezani <Mostafa.Ramezani@memphis.edu>",
           "Farhad Jazaei <fjazaei@memphis.edu>",
           "Jenna Davis <jennadavis@stanford.edu>",
           "Pål-Tore Storli <pal-tore.storli@ntnu.no>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Riverchain/rust-wqm"
repository = "https://github.com/Riverchain/rust-wqm"
documentation = "https://riverchain.github.io/rust-wqm/docs"
readme = "README.md"
description ="""
Crust is a water quality model written in rust
"""


[dependencies]
rand = "0.7.3"
nalgebra = "0.18"
